tests/fixtures/invalid/ord_str.py
# Cannot call ord() with Str
x = ord("hello")
